--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-powered-mass",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "npm@10.9.0",
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
